--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,20 @@ body {
   background-image: linear-gradient(to bottom right, #7a5cff 0%, #3cd644 100%);
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
-
-body {
   padding-top: 20px;
   user-select: none;
+  overflow: hidden;
 }
+
+.react-calculator {
+    position: relative;
+    margin: 0 auto;
+    width: 320px;
+    background-color: #292f36;
+    box-shadow: 0 19px 38px rgba(19, 19, 19, .24),
+  0 15px 12px rgba(19, 19, 19, .12);
+}
+
 
 button {
   outline: none;
